--- a/libarchive/repos/testing-x86_64/PKGBUILD
+++ b/libarchive/repos/testing-x86_64/PKGBUILD
@@ -10,13 +10,12 @@ url='https://libarchive.org/'
 license=(BSD)
 depends=(acl attr bzip2 expat lz4 openssl xz zlib zstd)
 provides=(libarchive.so)
-validpgpkeys=('A5A45B12AD92D964B89EEE2DEC560C81CEC2276E') # Martin Matuska <mm@FreeBSD.org>
-source=("https://github.com/${pkgname}/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz"{,.asc})
-sha256sums=('fcf87f3ad8db2e4f74f32526dee62dd1fb9894782b0a503a89c9d7a70a235191'
-            'SKIP')
+# validpgpkeys=('A5A45B12AD92D964B89EEE2DEC560C81CEC2276E') # Martin Matuska <mm@FreeBSD.org>
+source=("https://github.com/${pkgname}/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('fcf87f3ad8db2e4f74f32526dee62dd1fb9894782b0a503a89c9d7a70a235191')
 
 build() {
-  cd $pkgname-$pkgver 
+  cd $pkgname-$pkgver
 
   ./configure \
       --prefix=/usr \
