--- a/smartmontools/trunk/PKGBUILD
+++ b/smartmontools/trunk/PKGBUILD
@@ -13,8 +13,8 @@ arch=('x86_64')
 depends=('gcc-libs' 'libcap-ng' 'bash')
 optdepends=('s-nail: to get mail alerts to work')
 backup=('etc/smartd.conf')
-validpgpkeys=('847AF8F72DF4C7B492382C94BF0B339C64BCAA8B') # Smartmontools Signing Key (through 2020) <smartmontools-support@listi.jpberlin.de>
-source=("https://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz"{,.asc}
+#validpgpkeys=('847AF8F72DF4C7B492382C94BF0B339C64BCAA8B') # Smartmontools Signing Key (through 2020) <smartmontools-support@listi.jpberlin.de>
+source=("https://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz"
         'smartd.conf')
 sha256sums=('3f734d2c99deb1e4af62b25d944c6252de70ca64d766c4c7294545a2e659b846'
             'SKIP'
