--- a/subversion/trunk/PKGBUILD
+++ b/subversion/trunk/PKGBUILD
@@ -25,12 +25,14 @@ provides=('svn')
 backup=('etc/xinetd.d/svn' 'etc/conf.d/svnserve')
 options=('!makeflags' '!emptydirs')
 source=(https://www.apache.org/dist/subversion/subversion-${pkgver}.tar.bz2{,.asc}
+        ruby-27.patch
         svn
         svnserve.tmpfiles
         subversion.rpath.fix.patch
         ruby-frozen-nil.patch)
 sha512sums=('36f390b412bf772bf894efc2aadc247f12ca30ac407e04f664c14411c3519e1bb242d1239f2f44cbcb86eafc7c413efc8eadbfe1d1e75118235a7b7adc6c85b2'
             'SKIP'
+            '4057e4bb08da476c029629091f5c8a1c7c72104412baaf39b0e2bd69b64ff7963a1c10b210eb6e2275024cd3f697b7793f257a609c3278f31f5dec36d080594e'
             '3df59e92aa0314ff6adce26e2e1162bf2872ca03ff1f78891081a60e67b521b6046b4a2f85f718dcd27f9d5709594658817a09548cdb74e3976d371dbe47e7db'
             '7775f4da5003970c9ebdc2f696ba090df194a77d9daed791875488c943f72ae496b5f9cc6f3ff9f3f4de9f352a3b518137babdea38947d1a2d5dd16aa1844036'
             '60d538160e738eb3b3e84a3881fe5a8d75c79053d3f31c4c29ef6ace6ccc5dd4367ed712766c911bae3436e9706e4dd144b270bb45161a6c1834a37e154d0440'
@@ -53,6 +55,8 @@ prepare() {
    patch -p1 -i ../ruby-frozen-nil.patch
    sed -i 's|/usr/bin/env python|/usr/bin/env python2|' tools/hook-scripts/{,mailer/{,tests/}}*.py subversion/tests/cmdline/*.py
    rm subversion/bindings/swig/proxy/*.swg
+
+   patch -p1 < ../ruby-27.patch # https://issues.apache.org/jira/browse/SVN-4841
 
    ./autogen.sh
 }
@@ -77,7 +81,7 @@ build() {
 check() {
    cd ${pkgname}-${pkgver}
    export LANG=C LC_ALL=C
-   make check check-swig-pl check-swig-py check-swig-rb CLEANUP=yes # check-javahl ||:
+   make check check-swig-pl check-swig-py check-swig-rb CLEANUP=yes # check-javahl 
 }
 
 package() {
