--- a/apparmor/repos/extra-x86_64/PKGBUILD
+++ b/apparmor/repos/extra-x86_64/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: David Runge <dvzrv@archlinux.org>
 pkgname=apparmor
 pkgver=2.13.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Mandatory Access Control (MAC) using Linux Security Module (LSM)"
 arch=('x86_64')
 url="https://gitlab.com/apparmor/apparmor"
@@ -92,7 +92,8 @@ package() {
   make -C changehat/mod_apparmor DESTDIR="${pkgdir}" install
   make -C binutils DESTDIR="${pkgdir}" install
   make -C parser -j1 DESTDIR="${pkgdir}" \
-                     APPARMOR_BIN_PREFIX="${pkgdir}/usr/lib/apparmor"
+                     APPARMOR_BIN_PREFIX="${pkgdir}/usr/lib/apparmor" \
+                     install
   make -C profiles DESTDIR="${pkgdir}" install
   make -C utils DESTDIR="${pkgdir}" \
                 BINDIR="${pkgdir}/usr/bin" \
