--- a/freetds/repos/extra-x86_64/PKGBUILD
+++ b/freetds/repos/extra-x86_64/PKGBUILD
@@ -1,10 +1,10 @@
 # Maintainer:
 
 pkgname=freetds
-pkgver=1.00.100
+pkgver=1.1.24
 pkgrel=1
 pkgdesc='Library for accessing Sybase and MS SQL Server databases'
-url='http://www.freetds.org'
+url='https://www.freetds.org'
 arch=('x86_64')
 license=('LGPL')
 depends=('openssl' 'unixodbc')
@@ -12,12 +12,12 @@ backup=('etc/freetds/freetds.conf'
         'etc/freetds/locales.conf'
         'etc/freetds/pool.conf')
 source=("ftp://ftp.freetds.org/pub/freetds/stable/$pkgname-$pkgver.tar.bz2")
-sha512sums=('d13f53436905711b1c11f7de7a73a7511aa2c067b67ab3d8bd374b509ab4b6a7eb90f80d18b1775e58e737c4fb725b9761d2542c9dac3b69f0b5e03c7e9a5397')
+sha512sums=('7419a8f171ab50aeeb0cf0adc7f29c524dd5960a79249f89a52ec73b4cb843330d6c096aa71405cbe28bf568a8b7726f255955f74b3c12b5452d5b74715ecaa5')
 
 build() {
   cd $pkgname-$pkgver
   ./configure --prefix=/usr --sysconfdir=/etc/freetds --enable-msdblib \
-    --with-tdsver=7.0 --with-unixodbc=/usr --with-openssl
+    --with-unixodbc=/usr --with-openssl
   make 
 }
 
