--- a/git/trunk/PKGBUILD
+++ b/git/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=git
-pkgver=2.24.1
-pkgrel=4
+pkgver=2.25.0
+pkgrel=1
 pkgdesc='the fast distributed version control system'
 arch=(x86_64)
 url='https://git-scm.com/'
@@ -21,7 +21,7 @@ optdepends=('tk: gitk and git gui'
             'perl-datetime-format-iso8601: git mediawiki support'
             'perl-lwp-protocol-https: git mediawiki https support'
             'perl-cgi: gitweb (web interface) support'
-            'python: git svn'
+            'python: git svn & git p4'
             'subversion: git svn'
             'org.freedesktop.secrets: keyring credential helper'
             'libsecret: libsecret credential helper')
@@ -30,9 +30,9 @@ validpgpkeys=('96E07AF25771955980DAD10020D04E5A713660A7') # Junio C Hamano
 source=("https://www.kernel.org/pub/software/scm/git/git-$pkgver.tar."{xz,sign}
         '0001-git-p4-python.patch'
         'git-sysusers.conf')
-sha256sums=('723f24dce8fdd621a308b6187553fce7d5244205c065fe0a3aebd0b7c3f88562'
+sha256sums=('c060291a3ffb43d7c99f4aa5c4d37d3751cf6bca683e7344ea407ea504d9a8d0'
             'SKIP'
-            '256f9c674e3617ae4373cb89b6ab972bb0279331c39425b94becadccb3b1a63a'
+            '0d19345aaeaeb374f8bfc30b823e8f53cb128c56b68c6504bbdd8766c03d1df9'
             '7630e8245526ad80f703fac9900a1328588c503ce32b37b9f8811674fcda4a45')
 
 _make_paths=(
