--- a/sed/repos/core-x86_64/PKGBUILD
+++ b/sed/repos/core-x86_64/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=sed
-pkgver=4.7
-pkgrel=3
+pkgver=4.8
+pkgrel=1
 pkgdesc='GNU stream editor'
 arch=('x86_64')
 url='https://www.gnu.org/software/sed/'
@@ -14,8 +14,21 @@ depends=('glibc' 'acl' 'attr')
 makedepends=('gettext')
 source=("https://ftp.gnu.org/pub/gnu/sed/$pkgname-$pkgver.tar.xz"{,.sig})
 validpgpkeys=('155D3FC500C834486D1EEA677FD9FCCB000BEEEE') #Jim Meyering <jim@meyering.net>
-md5sums=('777ddfd9d71dd06711fe91f0925e1573'
-         'SKIP')
+sha256sums=('f79b0cfea71b37a8eeec8490db6c5f7ae7719c35587f21edb0617f370eeff633'
+            'SKIP')
+
+prepare() {
+  cd $pkgname-$pkgver
+  # apply patch from the source array (should be a pacman feature)
+  local src
+  for src in "${source[@]}"; do
+    src="${src%%::*}"
+    src="${src##*/}"
+    [[ $src = *.patch ]] || continue
+    msg2 "Applying patch $src..."
+    patch -Np1 < "../$src"
+  done
+}
 
 build() {
   cd $pkgname-$pkgver
