--- a/assimp/trunk/PKGBUILD
+++ b/assimp/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: jepaan <jepaan at hotmail dot com>
 
 pkgname=assimp
-pkgver=5.0.0
+pkgver=5.0.1
 pkgrel=1
 pkgdesc="Library to import various well-known 3D model formats in an uniform manner"
 arch=('x86_64')
@@ -11,12 +11,15 @@ depends=('zlib' 'gcc-libs' 'boost-libs')
 makedepends=('cmake' 'boost')
 url='http://assimp.sourceforge.net/index.html'
 source=("$pkgname-$pkgver.tar.gz::https://github.com/assimp/assimp/archive/v${pkgver}.tar.gz")
-md5sums=('f0807f7c9bb2fd7da3499ff52dacadd0')
+sha512sums=('51b704ffea778638b9e228578650f62691c56ee1a90337f8bbbee37e807455466d818234be24852334e5806260e5690932c9bd8e00f055c5c26782e0636538f0')
+
+prepare() {
+	mkdir ${srcdir}/${pkgname}-${pkgver}/build
+}
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd ${srcdir}/${pkgname}-${pkgver}/build
 
-	mkdir build && cd build
 	cmake .. \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_BUILD_TYPE=Release \
