--- a/elogind/repos/core-x86_64/PKGBUILD
+++ b/elogind/repos/core-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=elogind
 pkgname=('elogind' 'libelogind')
-pkgver=241.4
+pkgver=243.4
 pkgrel=1
 pkgdesc="The systemd project's logind, extracted to a standalone package"
 arch=('x86_64')
@@ -12,7 +12,7 @@ makedepends=('intltool' 'libtool' 'gperf' 'gtk-doc' 'polkit' 'dbus'
             'libseccomp' 'meson' 'kexec-tools' 'openrc')
 options=('!libtool')
 source=("${pkgbase}-${pkgver}.tar.gz::https://github.com/elogind/elogind/archive/v${pkgver}.tar.gz")
-sha256sums=('fb4d0f931d5fb11af5a4426b0198e85fabc83d604ee24427b26480164cddb7e1')
+sha256sums=('f1098745863138e6270ea22e78a39baef9a0356b48246c5a53b34211992dc7db')
 
 prepare() {
     cd ${pkgbase}-${pkgver}
@@ -35,7 +35,7 @@ build() {
 }
 
 check(){
-    meson test -C build
+    meson test -C build --print-errorlogs
 }
 
 package_elogind() {
