--- a/htop/repos/extra-x86_64/PKGBUILD
+++ b/htop/repos/extra-x86_64/PKGBUILD
@@ -1,4 +1,3 @@
-# $Id$
 # Maintainer: Christian Hesse <mail@eworm.de>
 # Maintainer: Angel Velasquez <angvp@archlinux.org>
 # Contributor: Eric Belanger <eric@archlinux.org>
@@ -6,10 +5,10 @@
 
 pkgname=htop
 pkgver=2.2.0
-pkgrel=2
-pkgdesc="Interactive process viewer"
+pkgrel=3
+pkgdesc='Interactive process viewer'
 arch=('x86_64')
-url="http://hisham.hm/htop/"
+url='https://hisham.hm/htop/'
 license=('GPL')
 depends=('ncurses' 'libnl')
 makedepends=('python')
@@ -17,7 +16,7 @@ optdepends=('lsof: show files opened by a process'
             'strace: attach to a running process')
 options=('!emptydirs' debug)
 #validpgpkeys=('8460980B2B79786DE0C7FCC83FD8F43C2BB3C478') # Hisham Muhammad <h@hisham.hm>
-source=("https://hisham.hm/$pkgname/releases/$pkgver/$pkgname-$pkgver.tar.gz"
+source=("https://hisham.hm/$pkgname/releases/$pkgver/$pkgname-$pkgver.tar.gz" #{,.asc}
         '0001-fix-option-string.patch')
 sha256sums=('d9d6826f10ce3887950d709b53ee1d8c1849a70fa38e91d5896ad8cbc6ba3c57'
             'e0ea3a91dfbc7f8c516a19e0d8890314845e768ea4132dfaa49c4d4e89ec10ca')
