--- a/nss/repos/core-x86_64/PKGBUILD
+++ b/nss/repos/core-x86_64/PKGBUILD
@@ -2,19 +2,19 @@
 
 pkgbase=nss
 pkgname=(nss ca-certificates-mozilla)
-pkgver=3.49.1
+pkgver=3.49.2
 pkgrel=1
 pkgdesc="Network Security Services"
 url="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/NSS"
 arch=(x86_64)
 license=(MPL GPL)
-_nsprver=4.20
-depends=("nspr>=${_nsprver}" sqlite zlib sh p11-kit)
+_nsprver=4.24
+depends=("nspr>=${_nsprver}" sqlite zlib sh 'p11-kit>=0.23.19')
 makedepends=(perl python gyp)
 source=("https://ftp.mozilla.org/pub/security/nss/releases/NSS_${pkgver//./_}_RTM/src/nss-${pkgver}.tar.gz"
         certdata2pem.py bundle.sh)
-sha256sums=('d9aa42e49e02bb0dc0a2f164604cfc718e11a2a06ddb266cd676376ac21b026e'
-            '0be02cecc27a6e55e1cad1783033b147f502b26f9fb1bb5a53e7a43bbcb68fa0'
+sha256sums=('faa7502c3ce9240d4be2aa88f63d88cf7d1cc512060e63ef21a7813c236160b2'
+            'd2a1579dae05fd16175fac27ef08b54731ecefdf414085c610179afcf62b096c'
             '3bfadf722da6773bdabdd25bdf78158648043d1b7e57615574f189a88ca865dd')
 
 prepare() {
@@ -83,7 +83,7 @@ package_nss() {
 
 package_ca-certificates-mozilla() {
   pkgdesc="Mozilla's set of trusted CA certificates"
-  depends=(ca-certificates-utils)
+  depends=('ca-certificates-utils>=20181109-3')
 
   install -Dm644 ca-bundle.trust.p11-kit \
     "$pkgdir/usr/share/ca-certificates/trust-source/mozilla.trust.p11-kit"
