--- a/dbus/repos/core-x86_64/PKGBUILD
+++ b/dbus/repos/core-x86_64/PKGBUILD
@@ -6,13 +6,13 @@
 pkgbase=dbus
 pkgname=(dbus dbus-docs)
 pkgver=1.12.16
-pkgrel=3
+pkgrel=5
 pkgdesc="Freedesktop.org message bus system"
 url="https://wiki.freedesktop.org/www/Software/dbus/"
 arch=(x86_64)
 license=(GPL custom)
 depends=(libx11 libelogind expat audit)
-makedepends=(elogind xmlto docbook-xsl python yelp-tools doxygen git autoconf-archive graphviz)
+makedepends=(elogind xmlto docbook-xsl python yelp-tools doxygen git autoconf-archive)
 _commit=23cc709db8fab94f11fa48772bff396b20aea8b0  # tags/dbus-1.12.16^0
 source=("git+https://gitlab.freedesktop.org/dbus/dbus.git#commit=$_commit"
         'dbus-enable-elogind.patch')
@@ -28,13 +28,7 @@ pkgver() {
 
 prepare() {
   cd dbus
-
-  # Reduce docs size
-  printf '%s\n' >>Doxyfile.in \
-    HAVE_DOT=yes DOT_IMAGE_FORMAT=svg INTERACTIVE_SVG=yes
-
   patch -Np 1 -i ${srcdir}/dbus-enable-elogind.patch
-
   NOCONFIGURE=1 ./autogen.sh
 }
 
@@ -67,19 +61,20 @@ check() {
 }
 
 package_dbus() {
-  provides=(libdbus)
+  depends+=(libelogind.so libaudit.so)
+  provides=(libdbus libdbus-1.so)
   conflicts=(libdbus)
   replaces=(libdbus)
 
   DESTDIR="$pkgdir" make -C dbus install
 
-  rm -r "$pkgdir/var/run"
-
-  install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
+  rm -r "$pkgdir"/{etc,var}
 
   # We have a pre-assigned uid (81)
   echo 'u dbus 81 "System Message Bus"' |
     install -Dm644 /dev/stdin "$pkgdir/usr/lib/sysusers.d/dbus.conf"
+
+  install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
 
   # Split docs
   mv "$pkgdir/usr/share/doc" "$srcdir"
@@ -90,7 +85,6 @@ package_dbus-docs() {
   depends=()
 
   install -Dt "$pkgdir/usr/share/licenses/$pkgname" -m644 dbus/COPYING
-
   mv doc "$pkgdir/usr/share"
 }
 
