--- a/netpbm/trunk/PKGBUILD
+++ b/netpbm/trunk/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: 
+# Maintainer:
 
 pkgname=netpbm
 pkgver=10.73.30
@@ -12,15 +12,14 @@ makedepends=('python2' 'jbigkit' 'subversion')
 options=('!makeflags')
 # Get docs with: wget --recursive --relative -nH http://netpbm.sourceforge.net/doc/
 source=(https://downloads.sourceforge.net/project/netpbm/super_stable/$pkgver/netpbm-$pkgver.tgz
-        https://sources.archlinux.org/other/packages/netpbm/netpbm-doc-31Jan2014.tar.xz{,.sig}
+        https://sources.archlinux.org/other/packages/netpbm/netpbm-doc-31Jan2014.tar.xz #{,.sig}
         netpbm-CAN-2005-2471.patch netpbm-security-code.patch netpbm-security-scripts.patch)
 sha256sums=('623b6829464eb6037ec65a14d952bcb8d6c835b7bc7f228888de617ab4e3b8c4'
             '74bcf840ee643c6917330c382484010cb99c004a3fcf05391bebcac63815acb3'
-            'SKIP'
             '991aba7897e0710687369b4e2edfba1397ecd77d62578eac496afbc47b5ca970'
             'd39951cf96db6b3f430edef6fddcab5ef082db49968f09eb1c3e891205bcdb5f'
             '2c397588d9cba2c40dee55c07713d5e77e0e04245db939fdc1962d7de4cf4a33')
-validpgpkeys=('5357F3B111688D88C1D88119FCF2CB179205AC90')
+#validpgpkeys=('5357F3B111688D88C1D88119FCF2CB179205AC90')
 
 prepare() {
   cd $pkgname-$pkgver
