--- a/openresolv/repos/core-any/PKGBUILD
+++ b/openresolv/repos/core-any/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Ignacio Galmarino <igalmarino@gmail.com>
 
 pkgname=openresolv
-pkgver=3.9.2
-pkgrel=2
+pkgver=3.10.0
+pkgrel=1
 pkgdesc="resolv.conf management framework (resolvconf)"
 arch=(any)
 url="https://roy.marples.name/projects/openresolv"
@@ -12,11 +12,14 @@ backup=(etc/resolvconf.conf)
 provides=(resolvconf)
 depends=(bash)
 makedepends=(eudev)
-source=("https://roy.marples.name/downloads/openresolv/${pkgname}-${pkgver}.tar.xz")
-sha256sums=('14d7e241682e5566f6b8bf4c7316c86d7a9b8e7ed48e1de4967dbf1ea84ed373')
+source=("https://roy.marples.name/downloads/openresolv/${pkgname}-${pkgver}.tar.xz"
+        fs33801.patch)
+sha256sums=('4078bc52dee022f4a1c7594045e724af9da5ef16d670e0c08444d1830033ba06'
+            '466678996689463af748bcdce7ea6f9f24f59004fa4db61fdc04da9f5fff2a6a')
 
 prepare() {
   cd $pkgname-$pkgver
+  patch -Np1 -i ../fs33801.patch
   sed -n '2,25{s:^# \?::;p}' resolvconf.in >LICENSE
 }
 
