--- a/ntp/trunk/PKGBUILD
+++ b/ntp/trunk/PKGBUILD
@@ -6,12 +6,12 @@ pkgname=ntp
 _pkgname=ntp #-dev
 _pkgver=4.2.8p13
 pkgver=${_pkgver/p/.p}
-pkgrel=2
+pkgrel=3
 pkgdesc='Network Time Protocol reference implementation'
 url='http://www.ntp.org/'
 license=('custom')
 arch=('x86_64')
-depends=('openssl' 'libcap' 'libedit')
+depends=('openssl' 'perl' 'libcap' 'libedit')
 backup=('etc/ntp.conf')
 source=("https://www.eecis.udel.edu/~ntp/ntp_spool/ntp4/ntp-4.2/${_pkgname}-${_pkgver}.tar.gz"
         'ntp.conf'
@@ -34,7 +34,6 @@ package() {
 	make DESTDIR="${pkgdir}" install
 
 	install -Dm644 ../ntp.conf "${pkgdir}"/etc/ntp.conf
-	
 	install -Dm644 ../ntp.sysusers "${pkgdir}"/usr/lib/sysusers.d/ntp.conf
 	install -Dm644 COPYRIGHT "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
