--- a/openssh/repos/core-x86_64/PKGBUILD
+++ b/openssh/repos/core-x86_64/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=openssh
 pkgver=8.1p1
-pkgrel=2
+pkgrel=4
 pkgdesc='Premier connectivity tool for remote login with the SSH protocol'
 url='https://www.openssh.com/portable.html'
 license=('custom:BSD')
@@ -16,13 +16,22 @@ optdepends=('xorg-xauth: X11 forwarding'
 validpgpkeys=('59C2118ED206D927E667EBE3D3E5F56B6D920D30')
 source=("https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"{,.asc}
         'sshd.conf'
-        'sshd.pam')
+        'sshd.pam'
+        'glibc-2.31.patch')
 sha256sums=('02f5dbef3835d0753556f973cd57b4c19b6b1f6cd24c03445e23ac77ca1b93ff'
             'SKIP'
             '4effac1186cc62617f44385415103021f72f674f8b8e26447fc1139c670090f6'
-            '64576021515c0a98b0aaf0a0ae02e0f5ebe8ee525b1e647ab68f369f81ecd846')
+            '64576021515c0a98b0aaf0a0ae02e0f5ebe8ee525b1e647ab68f369f81ecd846'
+            '25b4a4d9e2d9d3289ef30636a30e85fa1c71dd930d5efd712cca1a01a5019f93')
 
 backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd')
+
+install=install
+
+prepare() {
+	cd "${srcdir}/${pkgname}-${pkgver}"
+	patch -p1 -i "${srcdir}/glibc-2.31.patch"
+}
 
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
